basic color/content css changes

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-	background-color: #D85927;	
+	background-color: #9B2D3A;	
 	font-family: 'Open Sans Condensed', sans-serif;
 	color:#FFFFFF;
 	font-size: 20px;
