--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-	background-color: #000000;
+	background-color: #5670A1;
 	background-image: url(/assets/images/jumbotron.jpg);
 	display:block;
 	width: 100%;
