--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,7 +1,17 @@
+.navbarContainer {
+	widows: 100%;
+	height: 185px;
+	margin-bottom: -120px;
+}
+img {
+	float: left;
+	margin: 0px 400px 0px 0px;
+	vertical-align: center;
+
+}
+
 .login {
-	display: block;
-	background-color: #9B2D3A;
-	height: 100%;
 	width: 100%;
 	margin-bottom:0;
+	vertical-align: center;
 }
