Registration form moved

--- a/client/src/components/Users/RegistrationForm.css
+++ b/client/src/components/Users/RegistrationForm.css
@@ -2,6 +2,9 @@ body {
     font-family: sans-serif;
 }
 
+.formContainer {
+    margin-top: -300px;
+}
 input {
     line-height: 1.5;
     margin: 5px;
