--- a/client/src/pages/Signups/Signups.css
+++ b/client/src/pages/Signups/Signups.css
@@ -3,7 +3,7 @@ body {
 }
 
 .formContainer {
-    margin-top: -400px;
+    margin-top: -550px;
     margin-left: 10px;
 }
 
@@ -18,15 +18,20 @@ p {
     font-size:20px;
     color:#FFFFFF;
     margin-bottom:0;
+    margin-right: 20px;
+    display:inline-block;
 }
 
 input {
-    line-height: 1.5;
+    line-height: 1;
     margin:2px;
-    width: 300px;
+    /* width: 300px; */
     font-size:20px;
 }
 
+input[type="checkbox" i] {
+    width: 5px;
+}
 button {
     font-size: 14px;
     margin: 5px;
