--- a/client/src/pages/ScholarInfo/ScholarInfo.css
+++ b/client/src/pages/ScholarInfo/ScholarInfo.css
@@ -32,7 +32,7 @@ button {
 }
 
 .cardcontent {
-    background:green;
+    background:#5670A1;
     border: solid black 1px;
     width: 200px;
     height: 150px;
