--- a/client/src/pages/ScholarInfo/ScholarInfo.css
+++ b/client/src/pages/ScholarInfo/ScholarInfo.css
@@ -32,11 +32,13 @@ button {
 }
 
 .cardcontent {
+    float:left;
     background:#5670A1;
     border: solid black 1px;
     width: 200px;
     height: 150px;
     margin-bottom:10px;
+    margin-right:10px;
 }
 
 p {
