--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-	background-color: #5670A1;
+	background-color: #FFFFFF;
 	display:block;
 	width: 100%;
 	height:500px;
@@ -8,7 +8,7 @@
 
 h1 {
 	font-family: 'Open Sans Condensed', sans-serif;
-	color:#FFFFFF;
+	color:#6B747A;
 	font-size: 40px;
 	margin-top:0;
 	margin-left:600px;
