--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -13,6 +13,10 @@ body {
     color:#FFFFFF;
 }
 
+#directionForm{
+    background-color: #5670A1;
+}
+
 p {
     font-family:'Open Sans Condensed', sans-serif;
     font-size:20px;
