--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -23,7 +23,7 @@ h2 {
 
 h4 {
 	font-family: 'Open Sans Condensed', sans-serif;
-	color: #FFFFFF;
+	color: #6B747A;
 	font-size:20px;
 	margin-top: 100px;
 	margin-bottom:0;
