--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,13 +1,14 @@
 .navbarContainer {
 	widows: 100%;
 	height: 185px;
-	margin-bottom: -120px;
+	margin-bottom: -160px;
 }
 
 img {
 	float: left;
 	margin: 0px 400px 0px 0px;
 	vertical-align: center;
+	height:125px;
 
 }
 
