days sign up css

--- a/client/src/pages/Signups/Signups.css
+++ b/client/src/pages/Signups/Signups.css
@@ -13,6 +13,9 @@ body {
     color:#FFFFFF;
 }
 
+form {
+    padding-left:10px;
+}
 p {
     font-family:'Open Sans Condensed', sans-serif;
     font-size:20px;
