--- a/client/src/pages/Signups/Signups.css
+++ b/client/src/pages/Signups/Signups.css
@@ -11,6 +11,7 @@ body {
     font-family:'Open Sans Condensed', sans-serif;
     font-size:25px;
     color:#FFFFFF;
+    border: solid black 1px;
 }
 
 form {
