--- a/client/src/pages/ScholarInfo/ScholarInfo.css
+++ b/client/src/pages/ScholarInfo/ScholarInfo.css
@@ -23,7 +23,6 @@ p {
     color:#FFFFFF;
     margin-bottom:0;
     margin-right: 20px;
-    display:inline-block;
 }
 
 input[type="checkbox" i] {
@@ -40,12 +39,12 @@ button {
 }
 
 .cardcontent {
-    float:left;
     background:#9B2D3A;
     border: solid black 1px;
-    width: 250px;
+    width: 300px;
     height: 150px;
     margin: 10px 10px 10px 10px;
+    padding-left:5px;
 }
 
 p {
