--- a/client/src/pages/ScholarInfo/ScholarInfo.css
+++ b/client/src/pages/ScholarInfo/ScholarInfo.css
@@ -40,7 +40,7 @@ button {
 
 .cardcontent {
     background:#9B2D3A;
-    border: solid black 1px;
+    border: solid #000000 1px;
     width: 300px;
     height: 170px;
     margin: 10px 10px 10px 10px;
